<resources>
    <string name="app_name">Docount</string>
    <string name="action_settings">Mis ajustes</string>
    <string name="action_share">Comparte la aplicación</string>
    <string name="action_rate">Valora la aplicación</string>
    <string name="action_help">Ayuda</string>
    <string name="action_terms">Terminos y privacidad</string>
    <string name="action_aboutus">Acerca de</string>
    <string name="action_faq">Preguntas frecuentes</string>
    <string name="action_contactus">Contacta con nuestro equipo</string>
    <string name="action_termsuses">Términos de uso</string>
    <string name="action_polity">Política de privacidad</string>
    <string name="action_cookies">Gestión de cookies</string>
    <string name="new_docount">Nuevo Docount</string>
    <string name="titulo">Título</string>
    <string name="descripcion">Descripción</string>
    <string name="divisa">Divisa</string>
    <string name="category">Categoria</string>
    <string name="participantes">Participantes ( 0 / 50 )</string>
    <string name="mi_nombre">Mi nombre</string>
    <string name="desc_participantes">Enlaza los participantes con tus contactos para que podamos invitarlos automáticamente al docount</string>
    <string name="otro_participante">Otro participante</string>
    <string name="añadir">Añadir</string>
    <string name="desc_divisa">Especifica la divisa que se utilizará para cuadrar el docount.\nPueden usarse otras divisas para los gastos.</string>
    <string name="gastos">Gastos</string>
    <string name="saldos">Saldos</string>
    <string name="mi_total">MI TOTAL</string>
    <string name="gasto_total">GASTRO TOTAL</string>
    <string name="viaje">Viaje</string>
    <string name="casacompartida">Casa compartida</string>
    <string name="pareja">Pareja</string>
    <string name="celebracion">Celebración</string>
    <string name="proyecto">Proyecto</string>
    <string name="otros">Otros</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="error_Title">El título debe tener al menos un carácter</string>
    <string name="error_Name">Ya en la lista</string>
    <string name="error_noName">Por favor introduzca el nombre del participante</string>
    <string name="aceptar">Aceptar</string>
    <string name="choose_coin">Elección de la divisa</string>
    <string name="search">Buscar…</string>
    <string name="name">Nombre</string>
    <string name="email">Email</string>
    <string name="connect_with_email">Conectar con mi correo</string>
    <string name="privacidad">Docount valora tu privacidad. Más información en política de privacidad.</string>
    <string name="entrar">Entrar</string>
    <string name="google">Conectar con Google</string>
    <string name="facebook">Conectar con Facebook</string>
    <string name="importar_docount">Importar un Docount</string>
    <string name="desc_importar_docount">Pregunta a tus amigos por el enlace del docount que quieres importar. Luego solo haz click en el enlace. Si lo prefieres, también puedes copiarlo y pegarlo en este cuadro.</string>
    <string name="editext_importar_docount">Copia y pega el enlace aquí</string>
    <string name="ok">OK</string>
    <string name="si_acepto">Si, acepto</string>
    <string name="no">No</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="introduce">Bienvenido, Juan Carlos García Jaén</string>
    <string name="fake_email">fake.email@email.com</string>
    <string name="full_name">Nombre completo</string>
    <string name="alias">Alias</string>
    <string name="iban">IBAN</string>
    <string name="desc_iban">Añade tu IBAN. Este será visible para los amigos que te deban dinero. Recibe tus pagos más rapido.</string>
    <string name="pref">Preferencias</string>
    <string name="avisos">Avisos</string>
    <string name="exit">SALIR</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>